force-app/main/default/objects/FormQuestionResponse__c/FormQuestionResponse__c.object-meta.xml
<CustomObject>
    <label>Form Question Response</label>
    <nameField>
        <label>FormQuestionResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>