force-app/main/default/objects/FormQuestionResponse__c/fields/DisplayClass__c.field-meta.xml
<CustomField>
    <fullName>DisplayClass__c</fullName>
    <formula>IF( CONTAINS(TEXT(DataType__c), &apos;Input&apos;), &apos;customInput&apos;, &apos;customDisplay&apos;)</formula>
    <label>Display Class</label>
    <type>Text</type>
</CustomField>