force-app/main/default/objects/FormQuestionResponse__c/fields/DisplayText__c.field-meta.xml
<CustomField>
    <fullName>DisplayText__c</fullName>
    <label>Display Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>