force-app/main/default/objects/FormQuestionResponse__c/fields/FormQuestion__c.field-meta.xml
<CustomField>
    <fullName>FormQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Question</label>
    <referenceTo>FormQuestion__c</referenceTo>
    <relationshipLabel>Form Question Responses</relationshipLabel>
    <relationshipName>FormQuestionResponses</relationshipName>
    <type>Lookup</type>
</CustomField>