force-app/main/default/objects/FormQuestionResponse__c/fields/FormResponse__c.field-meta.xml
<CustomField>
    <fullName>FormResponse__c</fullName>
    <label>Form</label>
    <referenceTo>FormResponse__c</referenceTo>
    <relationshipLabel>Form Questions</relationshipLabel>
    <relationshipName>FormQuestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>