force-app/main/default/objects/FormQuestionResponse__c/fields/InputCheckbox__c.field-meta.xml
<CustomField>
    <fullName>InputCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Input Checkbox</label>
    <type>Checkbox</type>
</CustomField>