force-app/main/default/objects/FormQuestionResponse__c/fields/InputCurrency__c.field-meta.xml
<CustomField>
    <fullName>InputCurrency__c</fullName>
    <label>Input Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>