force-app/main/default/objects/FormQuestionResponse__c/fields/InputDate__c.field-meta.xml
<CustomField>
    <fullName>InputDate__c</fullName>
    <label>Input Date</label>
    <type>Date</type>
</CustomField>