force-app/main/default/objects/FormQuestionResponse__c/fields/InputDateTime__c.field-meta.xml
<CustomField>
    <fullName>InputDateTime__c</fullName>
    <label>Input DateTime</label>
    <type>DateTime</type>
</CustomField>