force-app/main/default/objects/FormQuestionResponse__c/fields/InputEmail__c.field-meta.xml
<CustomField>
    <fullName>InputEmail__c</fullName>
    <label>Input Email</label>
    <type>Email</type>
</CustomField>