force-app/main/default/objects/FormQuestionResponse__c/fields/InputNumber__c.field-meta.xml
<CustomField>
    <fullName>InputNumber__c</fullName>
    <label>Input Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>