force-app/main/default/objects/FormQuestionResponse__c/fields/InputText__c.field-meta.xml
<CustomField>
    <fullName>InputText__c</fullName>
    <label>Input Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>