force-app/main/default/objects/FormQuestionResponse__c/fields/InputTextArea__c.field-meta.xml
<CustomField>
    <fullName>InputTextArea__c</fullName>
    <label>Input Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>