force-app/main/default/objects/FormQuestionResponse__c/fields/InputTime__c.field-meta.xml
<CustomField>
    <fullName>InputTime__c</fullName>
    <label>Input Time</label>
    <type>Time</type>
</CustomField>