force-app/main/default/objects/FormQuestionResponse__c/fields/InputUrl__c.field-meta.xml
<CustomField>
    <fullName>InputUrl__c</fullName>
    <label>Input URL</label>
    <type>Url</type>
</CustomField>