force-app/main/default/objects/FormQuestionResponse__c/fields/PatternMismatchMessage__c.field-meta.xml
<CustomField>
    <fullName>PatternMismatchMessage__c</fullName>
    <label>Pattern Mismatch Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>