force-app/main/default/objects/FormQuestionResponse__c/fields/ResponseValues__c.field-meta.xml
<CustomField>
    <fullName>ResponseValues__c</fullName>
    <inlineHelpText>Response Values is a required field when the assessment question is of the data type Radio, Radio Group, Checkbox Group, or Picklist. Enter response values with each value separated by a new line.</inlineHelpText>
    <label>Response Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>