force-app/main/default/objects/FormQuestionResponse__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>