force-app/main/default/objects/FormQuestionResponse__c/fields/TargetRecord__c.field-meta.xml
<CustomField>
    <fullName>TargetRecord__c</fullName>
    <label>Target Record</label>
    <length>20</length>
    <type>Text</type>
</CustomField>