force-app/main/default/objects/FormQuestionResponse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DataType__c</columns>
    <columns>FormQuestion__c</columns>
    <columns>FormResponse__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>